--- a/recloud/templates/about.html
+++ b/recloud/templates/about.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReleCloud</title>
-</head>
-<body>
-    <p>Formed in 2021, ReleCloud is a Redmond, WA based company with our head in the clouds</p>
-</body>
-</html>
+{% extends 'base.html' %}
 
+{% block title %}
+ReleCloud - About
+{% endblock %}
+
+{% block content %}
+<h1>About ReleCloud</h1>
+<p>
+Formed in 2021, ReleCloud is a Redmond, WA based company with our head in the clouds - or stars really. We want to offer people the best possible experience for passengers exploring space.
+</p>
+{% endblock content %} 
