--- a/recloud/templates/index.html
+++ b/recloud/templates/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReleCloud</title>
-</head>
-<body>
-    <p>We are the premier space travel company.</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+ReleCloud - Expand your horizons
+{% endblock %}
+
+{% block content %}
+<h1>Welcome to ReleCloud</h1>
+<p>
+We are the premier space travel company. We have a scheduled first launch in 2030, but why wait? You can learn more about our destinations, and signup to be notified of our first launch. This is a once in a lifetime experience you certainly don't want to miss!
+</p>
+{% endblock content %}
