--- a/recloud/templates/destinations.html
+++ b/recloud/templates/destinations.html
@@ -9,6 +9,9 @@ ReleCloud - Destinations
 <p>
 If you can imagine it, we travel to it! Below is our list of confirmed destinations.
 </p>
+<p>
+    <a class="btn btn-primary" href="{% url 'destination_form' %}">Add destination</a>
+</p>
 <ul class="list-group">
     {% for destination in destinations %}
     <a class="list-group-item list-group-item-action" href="{% url 'destination_detail' destination.id %}">
