--- a/recloud/templates/base.html
+++ b/recloud/templates/base.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'info_request' %}">Request Pito</a>
+                    <a class="nav-link" href="{% url 'info_request' %}">Request data</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'destinations' %}">Destinations</a>
