--- a/recloud/templates/cruise_detail.html
+++ b/recloud/templates/cruise_detail.html
@@ -15,4 +15,32 @@ ReleCloud - {{ cruise }}
     <a class="list-group-item list-group-item-action" href="{% url 'destination_detail' destination.id %}">{{ destination }}</a>
     {% endfor %}
 </ul>
+
+<h2>Opiniones</h2>
+
+<p>
+  Valoración media: {{ cruise.average_rating|floatformat:1 }} / 5
+  ({{ cruise.reviews_count }} opiniones)
+</p>
+
+<p>
+  <a href="{% url 'cruise_review' cruise.pk %}">
+    Escribir una opinión
+  </a>
+</p>
+
+<ul>
+  {% for review in reviews %}
+    <li>
+      {{ review.rating }} / 5<br>
+      {{ review.comment|linebreaks }}<br>
+      <small>{{ review.created_at|date:"d/m/Y H:i" }}</small>
+    </li>
+  {% empty %}
+    <li>Aún no hay opiniones.</li>
+  {% endfor %}
+</ul>
+
+
+
 {% endblock content %}
